--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
          <div class="swiper-wrapper">
 
-            <div class="swiper-slide slide" style="background: url(images/home-slide1.jpg) no-repeat;">
+            <div class="swiper-slide slide" style="background: url(home-slide1.jpg) no-repeat;">
                <div class="content">
                   <h3>it's where dreams come true</h3>
                   <a href="#" class="btn"> visit our offer</a>
