--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                </div>
             </div>
 
-            <div class="swiper-slide slide" style="background: url(images/home-slide2.jpg) no-repeat;">
+            <div class="swiper-slide slide" style="background: url(home-slide2.jpg) no-repeat;">
                <div class="content">
                   <h3>it's where dreams come true</h3>
                   <a href="#" class="btn"> visit our offer</a>
                </div>
             </div>
 
-            <div class="swiper-slide slide" style="background: url(images/home-slide3.jpg) no-repeat;">
+            <div class="swiper-slide slide" style="background: url(home-slide3.jpg) no-repeat;">
                <div class="content">
                   <h3>it's where dreams come true</h3>
                   <a href="#" class="btn"> visit our offer</a>
                </div>
             </div>
 
-            <div class="swiper-slide slide" style="background: url(images/home-slide4.jpg) no-repeat;">
+            <div class="swiper-slide slide" style="background: url(home-slide4.jpg) no-repeat;">
                <div class="content">
                   <h3>it's where dreams come true</h3>
                   <a href="#" class="btn"> visit our offer</a>
@@ -151,7 +151,7 @@
       <div class="row">
 
          <div class="image">
-            <img src="images/about.jpg" alt="">
+            <img src="about.jpg" alt="">
          </div>
 
          <div class="content">
@@ -179,7 +179,7 @@
             <div class="swiper-slide slide">
                <div class="image">
                   <span class="price">$15.99/night</span>
-                  <img src="images/room-1.jpg" alt="">
+                  <img src="room-1.jpg" alt="">
                   <a href="#" class="fas fa-shopping-cart"></a>
                </div>
                <div class="content">
@@ -199,7 +199,7 @@
             <div class="swiper-slide slide">
                <div class="image">
                   <span class="price">$15.99/night</span>
-                  <img src="images/room-2.jpg" alt="">
+                  <img src="room-2.jpg" alt="">
                   <a href="#" class="fas fa-shopping-cart"></a>
                </div>
                <div class="content">
@@ -219,7 +219,7 @@
             <div class="swiper-slide slide">
                <div class="image">
                   <span class="price">$15.99/night</span>
-                  <img src="images/room-3.jpg" alt="">
+                  <img src="room-3.jpg" alt="">
                   <a href="#" class="fas fa-shopping-cart"></a>
                </div>
                <div class="content">
@@ -239,7 +239,7 @@
             <div class="swiper-slide slide">
                <div class="image">
                   <span class="price">$15.99/night</span>
-                  <img src="images/room-4.jpg" alt="">
+                  <img src="room-4.jpg" alt="">
                   <a href="#" class="fas fa-shopping-cart"></a>
                </div>
                <div class="content">
@@ -259,7 +259,7 @@
             <div class="swiper-slide slide">
                <div class="image">
                   <span class="price">$15.99/night</span>
-                  <img src="images/room-5.jpg" alt="">
+                  <img src="room-5.jpg" alt="">
                   <a href="#" class="fas fa-shopping-cart"></a>
                </div>
                <div class="content">
@@ -279,7 +279,7 @@
             <div class="swiper-slide slide">
                <div class="image">
                   <span class="price">$15.99/night</span>
-                  <img src="images/room-6.jpg" alt="">
+                  <img src="room-6.jpg" alt="">
                   <a href="#" class="fas fa-shopping-cart"></a>
                </div>
                <div class="content">
@@ -313,32 +313,32 @@
       <div class="box-container">
 
          <div class="box">
-            <img src="images/service1.png" alt="">
+            <img src="service1.png" alt="">
             <h3>swimming pool</h3>
          </div>
 
          <div class="box">
-            <img src="images/service2.png" alt="">
+            <img src="service2.png" alt="">
             <h3>food & drink</h3>
          </div>
 
          <div class="box">
-            <img src="images/service3.png" alt="">
+            <img src="service3.png" alt="">
             <h3>restaurant</h3>
          </div>
 
          <div class="box">
-            <img src="images/service4.png" alt="">
+            <img src="service4.png" alt="">
             <h3>fitness</h3>
          </div>
 
          <div class="box">
-            <img src="images/service5.png" alt="">
+            <img src="service5.png" alt="">
             <h3>beauty spa</h3>
          </div>
 
          <div class="box">
-            <img src="images/service6.png" alt="">
+            <img src="service6.png" alt="">
             <h3>resort beach</h3>
          </div>
 
@@ -359,42 +359,42 @@
          <div class="swiper-wrapper">
 
             <div class="swiper-slide slide">
-               <img src="images/gallery1.jpg" alt="">
+               <img src="gallery1.jpg" alt="">
                <div class="icon">
                   <i class="fas fa-magnifying-glass-plus"></i>
                </div>
             </div>
 
             <div class="swiper-slide slide">
-               <img src="images/gallery2.jpg" alt="">
+               <img src="gallery2.jpg" alt="">
                <div class="icon">
                   <i class="fas fa-magnifying-glass-plus"></i>
                </div>
             </div>
 
             <div class="swiper-slide slide">
-               <img src="images/gallery3.jpg" alt="">
+               <img src="gallery3.jpg" alt="">
                <div class="icon">
                   <i class="fas fa-magnifying-glass-plus"></i>
                </div>
             </div>
 
             <div class="swiper-slide slide">
-               <img src="images/gallery4.jpg" alt="">
+               <img src="gallery4.jpg" alt="">
                <div class="icon">
                   <i class="fas fa-magnifying-glass-plus"></i>
                </div>
             </div>
 
             <div class="swiper-slide slide">
-               <img src="images/gallery5.jpg" alt="">
+               <img src="gallery5.jpg" alt="">
                <div class="icon">
                   <i class="fas fa-magnifying-glass-plus"></i>
                </div>
             </div>
 
             <div class="swiper-slide slide">
-               <img src="images/gallery6.jpg" alt="">
+               <img src="gallery6.jpg" alt="">
                <div class="icon">
                   <i class="fas fa-magnifying-glass-plus"></i>
                </div>
@@ -420,7 +420,7 @@
                <i class="fas fa-quote-right"></i>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi sint dolorum, magni esse suscipit quia ab quos neque repudiandae omnis quo aliquam dolore temporibus libero vel voluptas velit porro!</p>
                <div class="user">
-                  <img src="images/pic-1.png" alt="">
+                  <img src="pic-1.png" alt="">
                   <div class="user-info">
                      <h3>john deo</h3>
                      <div class="stars">
@@ -439,7 +439,7 @@
                <i class="fas fa-quote-right"></i>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi sint dolorum, magni esse suscipit quia ab quos neque repudiandae omnis quo aliquam dolore temporibus libero vel voluptas velit porro!</p>
                <div class="user">
-                  <img src="images/pic-2.png" alt="">
+                  <img src="pic-2.png" alt="">
                   <div class="user-info">
                      <h3>john deo</h3>
                      <div class="stars">
@@ -458,7 +458,7 @@
                <i class="fas fa-quote-right"></i>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi sint dolorum, magni esse suscipit quia ab quos neque repudiandae omnis quo aliquam dolore temporibus libero vel voluptas velit porro!</p>
                <div class="user">
-                  <img src="images/pic-3.png" alt="">
+                  <img src="pic-3.png" alt="">
                   <div class="user-info">
                      <h3>john deo</h3>
                      <div class="stars">
@@ -477,7 +477,7 @@
                <i class="fas fa-quote-right"></i>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi sint dolorum, magni esse suscipit quia ab quos neque repudiandae omnis quo aliquam dolore temporibus libero vel voluptas velit porro!</p>
                <div class="user">
-                  <img src="images/pic-4.png" alt="">
+                  <img src="pic-4.png" alt="">
                   <div class="user-info">
                      <h3>john deo</h3>
                      <div class="stars">
@@ -496,7 +496,7 @@
                <i class="fas fa-quote-right"></i>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi sint dolorum, magni esse suscipit quia ab quos neque repudiandae omnis quo aliquam dolore temporibus libero vel voluptas velit porro!</p>
                <div class="user">
-                  <img src="images/pic-5.png" alt="">
+                  <img src="pic-5.png" alt="">
                   <div class="user-info">
                      <h3>john deo</h3>
                      <div class="stars">
@@ -515,7 +515,7 @@
                <i class="fas fa-quote-right"></i>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi sint dolorum, magni esse suscipit quia ab quos neque repudiandae omnis quo aliquam dolore temporibus libero vel voluptas velit porro!</p>
                <div class="user">
-                  <img src="images/pic-6.png" alt="">
+                  <img src="pic-6.png" alt="">
                   <div class="user-info">
                      <h3>john deo</h3>
                      <div class="stars">
@@ -546,7 +546,7 @@
       <div class="row">
 
          <div class="image">
-            <img src="images/FAQs.gif" alt="">
+            <img src="FAQs.gif" alt="">
          </div>
 
          <div class="content">
