--- a/index.html
+++ b/index.html
@@ -678,10 +678,10 @@
 
          <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-852-4565 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +123-852-4565</a>
-            <a href="#"> <i class="fas fa-envelope"></i> ninjashub4@gmail.com</a>
-            <a href="#"> <i class="fas fa-map"></i> karachi, pakistan</a>
+            <a href="#"> <i class="fas fa-phone"></i> +91 0000000000 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +91 1234567890</a>
+            <a href="#"> <i class="fas fa-envelope"></i> abhi@gmail.com</a>
+            <a href="#"> <i class="fas fa-map"></i> Vijayawada, Andhra pradesh, India</a>
          </div>
 
          <div class="box">
